Issue #15544: Fix Decimal.__float__ to work with payload-carrying NaNs.